src/src/objects/CUSTOMER__c.object
<CustomObject>
    <fields>
        <fullName>ACCOUNT_NUMBER__c</fullName>
        <label>ACCOUNT NUMBER</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account id</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CUSTOMERS</relationshipLabel>
        <relationshipName>CUSTOMERS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FAX_NUMBER__c</fullName>
        <label>FAX NUMBER</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PHONE_NUMBER__c</fullName>
        <label>PHONE NUMBER</label>
        <type>Phone</type>
    </fields>
    <label>CUSTOMER</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CUSTOMER NAME</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CUSTOMERS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>